[workspace]

members = ["rucord_ws", "rucord_api_types", "rucord_rest", "examples/*"]

[workspace.dependencies]
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1", features = ["sync", "time"] }
bitflags = "1.3.2"
serde_json = "1.0.93"
num-traits = "0.2"
num-derive = "0.3.3"
async-trait = "0.1.64"
derive_more = "0.99.17"
