[package]
name = "rucord_api_types"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"


[dependencies]
bitflags = "1.3.2"
strum = "0.24.1"
strum_macros = "0.24.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
num-derive = "0.3.3"
num-traits = "0.2"
serde_repr = "0.1.10"
