[package]
name = "rucord_api_types"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"


[dependencies]
derive_more.workspace = true
serde.workspace = true
bitflags.workspace = true
serde_json.workspace = true
num-traits.workspace = true
num-derive.workspace = true

strum = "0.24.1"
strum_macros = "0.24.3"
serde_repr = "0.1.10"
