[package]
name = "rucord_rest"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.152" }
reqwest = { default-features = false, features = [
    "json",
    "multipart",
    "stream",
    "native-tls",
], version = "0.11.14" }

rucord_api_types = { path = "../rucord_api_types" }
