[package]
name = "rucord_ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
bitflags.workspace = true
tokio.workspace = true
serde_json.workspace = true
num-traits.workspace = true
num-derive.workspace = true
async-trait.workspace = true
derive_more.workspace = true

async-tungstenite = { version = "0.20.0", features = [
    "tokio-runtime",
    "tokio-native-tls",
] }
futures = { version = "0.3.26", default-features = false, features = ["std"] }
strum = "0.24.1"
strum_macros = "0.24.3"
kanal = "0.1.0-pre8"
rand = "0.8.5"

rucord_api_types = { path = "../rucord_api_types" }
rucord_rest = { path = "../rucord_rest" }
async-recursion = "1.0.2"

[dev-dependencies]
actix-rt = "*"
